--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.5",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "web-vitals": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
