--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.34.5",
     "react-router-dom": "^6.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
