--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "fastify": "^3.25.1",
     "lodash": "^4.17.21",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.2",
+    "@types/uuid": "^8.3.3",
     "ts-node-dev": "^1.1.8"
   }
 }
